// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render failed state form for authenticating with multi option 1`] = `
.c5 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
  width: 100%;
}

.c5 a {
  color: #FFFFFF;
}

.c3 {
  box-sizing: border-box;
  padding: 32px;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c10 {
  box-sizing: border-box;
  max-width: 50%;
  margin-bottom: 24px;
  margin-right: 16px;
  width: 100%;
}

.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 16px;
  width: 100%;
}

.c13:active {
  opacity: 0.56;
}

.c13:hover,
.c13:focus {
  background: #651FFF;
}

.c13:active {
  background: #354AA4;
}

.c13:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  width: 512px;
  background-color: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c8 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  color: #324148;
  background-color: #FFFFFF;
  margin-top: 4px;
}

.c8::-ms-clear {
  display: none;
}

.c8::placeholder {
  opacity: 0.4;
}

.c8:read-only {
  cursor: not-allowed;
}

.c7 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0px;
}

.c11 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 4px;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  padding-top: 32px;
  color: #FFFFFF;
  text-align: center;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.56);
  text-align: center;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 16px;
  color: rgba(255,255,255,0.56);
  text-align: center;
}

.c9 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c12 .react-select-container {
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  border: none;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: rgba(0,0,0,0.87);
  background-color: #ffffff;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c12 .react-select__control,
.c12 .react-select__control--is-focused {
  min-height: 40px;
  height: 40px;
  background-color: transparent;
  border-color: transparent;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
}

.c12 .react-select__control:hover,
.c12 .react-select__control--is-focused:hover {
  border-color: transparent;
  cursor: pointer;
}

.c12 .react-select__option:hover {
  cursor: pointer;
  background-color: #eceff1;
}

.c12 .react-select__option--is-focused {
  background-color: #eceff1;
}

.c12 .react-select__option--is-selected {
  background-color: #cfd8dc;
  color: inherit;
}

.c12 .react-select__option--is-selected:hover {
  background-color: #cfd8dc;
}

.c12 .react-select__menu {
  margin-top: 0px;
}

.c12 .react-select__indicator-separator {
  display: none;
}

.c12 .react-select__loading-indicator {
  display: none;
}

.c12 .react-select--is-disabled .react-select__single-value,
.c12 .react-select--is-disabled .react-select__placeholder {
  color: rgba(0,0,0,0.24);
}

.c12 .react-select--is-disabled .react-select__indicator {
  color: rgba(0,0,0,0.14);
}

<form
  class="c0"
  width="512px"
>
  <div
    class="c1"
    color="light"
  >
    Password Recovery
  </div>
  <div
    class="c2"
    color="text.secondary"
  >
    Step 1 of 
    3
  </div>
  <div
    class="c3"
  >
    <div
      class="c4"
      color="text.secondary"
    >
      Verify your identity using your two-factor device.
    </div>
    <div
      class="c5"
      kind="danger"
      width="100%"
    >
      error message
    </div>
    <div
      class="c6"
    >
      <label
        class="c7"
        font-size="0"
      >
        Username
        <input
          autocomplete="off"
          class="c8"
          color="text.onLight"
          inputmode="text"
          readonly=""
          type="text"
          value="joe@example.com"
        />
      </label>
    </div>
    <div
      class="c9"
    >
      <div
        class="c10"
        width="100%"
      >
        <label
          class="c11"
          font-size="0"
        >
          Two-factor type
        </label>
        <div
          class="c12"
        >
          <div
            class="react-select-container css-2b097c-container"
          >
            <div
              class="react-select__control css-yk16xz-control"
            >
              <div
                class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
              >
                <div
                  class="react-select__single-value css-1uccc91-singleValue"
                >
                  Hardware Key
                </div>
                <input
                  aria-autocomplete="list"
                  class="css-62g3xt-dummyInput"
                  id="react-select-5-input"
                  readonly=""
                  tabindex="0"
                  value=""
                />
              </div>
              <div
                class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-6q0nyr-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="c13"
      kind="primary"
      type="submit"
      width="100%"
    >
      Continue
    </button>
  </div>
</form>
`;

exports[`render failed state form for authenticating with password 1`] = `
.c5 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
  width: 100%;
}

.c5 a {
  color: #FFFFFF;
}

.c3 {
  box-sizing: border-box;
  padding: 32px;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c9 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 16px;
  width: 100%;
}

.c9:active {
  opacity: 0.56;
}

.c9:hover,
.c9:focus {
  background: #651FFF;
}

.c9:active {
  background: #354AA4;
}

.c9:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  width: 512px;
  background-color: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c8 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  color: #324148;
  background-color: #FFFFFF;
  margin-top: 4px;
}

.c8::-ms-clear {
  display: none;
}

.c8::placeholder {
  opacity: 0.4;
}

.c8:read-only {
  cursor: not-allowed;
}

.c7 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0px;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  padding-top: 32px;
  color: #FFFFFF;
  text-align: center;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.56);
  text-align: center;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 16px;
  color: rgba(255,255,255,0.56);
  text-align: center;
}

<form
  class="c0"
  width="512px"
>
  <div
    class="c1"
    color="light"
  >
    Two-Factor Device Recovery
  </div>
  <div
    class="c2"
    color="text.secondary"
  >
    Step 1 of 
    4
  </div>
  <div
    class="c3"
  >
    <div
      class="c4"
      color="text.secondary"
    >
      Verify your identity using your password.
    </div>
    <div
      class="c5"
      kind="danger"
      width="100%"
    >
      wrong password
    </div>
    <div
      class="c6"
    >
      <label
        class="c7"
        font-size="0"
      >
        Username
        <input
          autocomplete="off"
          class="c8"
          color="text.onLight"
          inputmode="text"
          readonly=""
          type="text"
          value="joe@example.com"
        />
      </label>
    </div>
    <div
      class="c6"
    >
      <label
        class="c7"
        font-size="0"
      >
        Password
        <input
          autocomplete="off"
          class="c8"
          color="text.onLight"
          inputmode="text"
          placeholder="Password"
          type="password"
          value=""
        />
      </label>
    </div>
    <button
      class="c9"
      kind="primary"
      type="submit"
      width="100%"
    >
      Continue
    </button>
  </div>
</form>
`;

exports[`render failed state form for authenticating with totp 1`] = `
.c5 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
  width: 100%;
}

.c5 a {
  color: #FFFFFF;
}

.c3 {
  box-sizing: border-box;
  padding: 32px;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c10 {
  box-sizing: border-box;
  max-width: 50%;
  margin-bottom: 24px;
  margin-right: 16px;
  width: 100%;
}

.c13 {
  box-sizing: border-box;
  margin-bottom: 24px;
  width: 50%;
}

.c14 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 16px;
  width: 100%;
}

.c14:active {
  opacity: 0.56;
}

.c14:hover,
.c14:focus {
  background: #651FFF;
}

.c14:active {
  background: #354AA4;
}

.c14:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  width: 512px;
  background-color: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c8 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  color: #324148;
  background-color: #FFFFFF;
  margin-top: 4px;
}

.c8::-ms-clear {
  display: none;
}

.c8::placeholder {
  opacity: 0.4;
}

.c8:read-only {
  cursor: not-allowed;
}

.c7 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0px;
}

.c11 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 4px;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  padding-top: 32px;
  color: #FFFFFF;
  text-align: center;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.56);
  text-align: center;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 16px;
  color: rgba(255,255,255,0.56);
  text-align: center;
}

.c9 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c12 .react-select-container {
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  border: none;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: rgba(0,0,0,0.87);
  background-color: #ffffff;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c12 .react-select__control,
.c12 .react-select__control--is-focused {
  min-height: 40px;
  height: 40px;
  background-color: transparent;
  border-color: transparent;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
}

.c12 .react-select__control:hover,
.c12 .react-select__control--is-focused:hover {
  border-color: transparent;
  cursor: pointer;
}

.c12 .react-select__option:hover {
  cursor: pointer;
  background-color: #eceff1;
}

.c12 .react-select__option--is-focused {
  background-color: #eceff1;
}

.c12 .react-select__option--is-selected {
  background-color: #cfd8dc;
  color: inherit;
}

.c12 .react-select__option--is-selected:hover {
  background-color: #cfd8dc;
}

.c12 .react-select__menu {
  margin-top: 0px;
}

.c12 .react-select__indicator-separator {
  display: none;
}

.c12 .react-select__loading-indicator {
  display: none;
}

.c12 .react-select--is-disabled .react-select__single-value,
.c12 .react-select--is-disabled .react-select__placeholder {
  color: rgba(0,0,0,0.24);
}

.c12 .react-select--is-disabled .react-select__indicator {
  color: rgba(0,0,0,0.14);
}

<form
  class="c0"
  width="512px"
>
  <div
    class="c1"
    color="light"
  >
    Password Recovery
  </div>
  <div
    class="c2"
    color="text.secondary"
  >
    Step 1 of 
    3
  </div>
  <div
    class="c3"
  >
    <div
      class="c4"
      color="text.secondary"
    >
      Verify your identity using your authenticator app.
    </div>
    <div
      class="c5"
      kind="danger"
      width="100%"
    >
      wrong totp token
    </div>
    <div
      class="c6"
    >
      <label
        class="c7"
        font-size="0"
      >
        Username
        <input
          autocomplete="off"
          class="c8"
          color="text.onLight"
          inputmode="text"
          readonly=""
          type="text"
          value="joe@example.com"
        />
      </label>
    </div>
    <div
      class="c9"
    >
      <div
        class="c10"
        width="100%"
      >
        <label
          class="c11"
          font-size="0"
        >
          Two-factor type
        </label>
        <div
          class="c12"
        >
          <div
            class="react-select-container css-2b097c-container"
          >
            <div
              class="react-select__control css-yk16xz-control"
            >
              <div
                class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
              >
                <div
                  class="react-select__single-value css-1uccc91-singleValue"
                >
                  Authenticator App
                </div>
                <input
                  aria-autocomplete="list"
                  class="css-62g3xt-dummyInput"
                  id="react-select-3-input"
                  readonly=""
                  tabindex="0"
                  value=""
                />
              </div>
              <div
                class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-6q0nyr-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c13"
        width="50%"
      >
        <label
          class="c7"
          font-size="0"
        >
          authenticator code
          <input
            autocomplete="one-time-code"
            class="c8"
            color="text.onLight"
            inputmode="numeric"
            placeholder="123 456"
            type="text"
            value=""
          />
        </label>
      </div>
    </div>
    <button
      class="c14"
      kind="primary"
      type="submit"
      width="100%"
    >
      Continue
    </button>
  </div>
</form>
`;

exports[`render failed state form for authenticating with webauthn 1`] = `
.c5 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
  width: 100%;
}

.c5 a {
  color: #FFFFFF;
}

.c3 {
  box-sizing: border-box;
  padding: 32px;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c10 {
  box-sizing: border-box;
  max-width: 50%;
  margin-bottom: 24px;
  margin-right: 16px;
  width: 100%;
}

.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 16px;
  width: 100%;
}

.c13:active {
  opacity: 0.56;
}

.c13:hover,
.c13:focus {
  background: #651FFF;
}

.c13:active {
  background: #354AA4;
}

.c13:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  width: 512px;
  background-color: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c8 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  color: #324148;
  background-color: #FFFFFF;
  margin-top: 4px;
}

.c8::-ms-clear {
  display: none;
}

.c8::placeholder {
  opacity: 0.4;
}

.c8:read-only {
  cursor: not-allowed;
}

.c7 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0px;
}

.c11 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 4px;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  padding-top: 32px;
  color: #FFFFFF;
  text-align: center;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.56);
  text-align: center;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 16px;
  color: rgba(255,255,255,0.56);
  text-align: center;
}

.c9 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c12 .react-select-container {
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  border: none;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: rgba(0,0,0,0.87);
  background-color: #ffffff;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c12 .react-select__control,
.c12 .react-select__control--is-focused {
  min-height: 40px;
  height: 40px;
  background-color: transparent;
  border-color: transparent;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
}

.c12 .react-select__control:hover,
.c12 .react-select__control--is-focused:hover {
  border-color: transparent;
  cursor: pointer;
}

.c12 .react-select__option:hover {
  cursor: pointer;
  background-color: #eceff1;
}

.c12 .react-select__option--is-focused {
  background-color: #eceff1;
}

.c12 .react-select__option--is-selected {
  background-color: #cfd8dc;
  color: inherit;
}

.c12 .react-select__option--is-selected:hover {
  background-color: #cfd8dc;
}

.c12 .react-select__menu {
  margin-top: 0px;
}

.c12 .react-select__indicator-separator {
  display: none;
}

.c12 .react-select__loading-indicator {
  display: none;
}

.c12 .react-select--is-disabled .react-select__single-value,
.c12 .react-select--is-disabled .react-select__placeholder {
  color: rgba(0,0,0,0.24);
}

.c12 .react-select--is-disabled .react-select__indicator {
  color: rgba(0,0,0,0.14);
}

<form
  class="c0"
  width="512px"
>
  <div
    class="c1"
    color="light"
  >
    Password Recovery
  </div>
  <div
    class="c2"
    color="text.secondary"
  >
    Step 1 of 
    3
  </div>
  <div
    class="c3"
  >
    <div
      class="c4"
      color="text.secondary"
    >
      Verify your identity using your hardware key.
    </div>
    <div
      class="c5"
      kind="danger"
      width="100%"
    >
      invalid device
    </div>
    <div
      class="c6"
    >
      <label
        class="c7"
        font-size="0"
      >
        Username
        <input
          autocomplete="off"
          class="c8"
          color="text.onLight"
          inputmode="text"
          readonly=""
          type="text"
          value="joe@example.com"
        />
      </label>
    </div>
    <div
      class="c9"
    >
      <div
        class="c10"
        width="100%"
      >
        <label
          class="c11"
          font-size="0"
        >
          Two-factor type
        </label>
        <div
          class="c12"
        >
          <div
            class="react-select-container css-2b097c-container"
          >
            <div
              class="react-select__control css-yk16xz-control"
            >
              <div
                class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
              >
                <div
                  class="react-select__single-value css-1uccc91-singleValue"
                >
                  Hardware Key
                </div>
                <input
                  aria-autocomplete="list"
                  class="css-62g3xt-dummyInput"
                  id="react-select-7-input"
                  readonly=""
                  tabindex="0"
                  value=""
                />
              </div>
              <div
                class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-6q0nyr-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="c13"
      kind="primary"
      type="submit"
      width="100%"
    >
      Continue
    </button>
  </div>
</form>
`;

exports[`render form for authenticating with multi option 1`] = `
.c3 {
  box-sizing: border-box;
  padding: 32px;
}

.c5 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c9 {
  box-sizing: border-box;
  max-width: 50%;
  margin-bottom: 24px;
  margin-right: 16px;
  width: 100%;
}

.c12 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 16px;
  width: 100%;
}

.c12:active {
  opacity: 0.56;
}

.c12:hover,
.c12:focus {
  background: #651FFF;
}

.c12:active {
  background: #354AA4;
}

.c12:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  width: 512px;
  background-color: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c7 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  color: #324148;
  background-color: #FFFFFF;
  margin-top: 4px;
}

.c7::-ms-clear {
  display: none;
}

.c7::placeholder {
  opacity: 0.4;
}

.c7:read-only {
  cursor: not-allowed;
}

.c6 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0px;
}

.c10 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 4px;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  padding-top: 32px;
  color: #FFFFFF;
  text-align: center;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.56);
  text-align: center;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 16px;
  color: rgba(255,255,255,0.56);
  text-align: center;
}

.c8 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c11 .react-select-container {
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  border: none;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: rgba(0,0,0,0.87);
  background-color: #ffffff;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c11 .react-select__control,
.c11 .react-select__control--is-focused {
  min-height: 40px;
  height: 40px;
  background-color: transparent;
  border-color: transparent;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
}

.c11 .react-select__control:hover,
.c11 .react-select__control--is-focused:hover {
  border-color: transparent;
  cursor: pointer;
}

.c11 .react-select__option:hover {
  cursor: pointer;
  background-color: #eceff1;
}

.c11 .react-select__option--is-focused {
  background-color: #eceff1;
}

.c11 .react-select__option--is-selected {
  background-color: #cfd8dc;
  color: inherit;
}

.c11 .react-select__option--is-selected:hover {
  background-color: #cfd8dc;
}

.c11 .react-select__menu {
  margin-top: 0px;
}

.c11 .react-select__indicator-separator {
  display: none;
}

.c11 .react-select__loading-indicator {
  display: none;
}

.c11 .react-select--is-disabled .react-select__single-value,
.c11 .react-select--is-disabled .react-select__placeholder {
  color: rgba(0,0,0,0.24);
}

.c11 .react-select--is-disabled .react-select__indicator {
  color: rgba(0,0,0,0.14);
}

<form
  class="c0"
  width="512px"
>
  <div
    class="c1"
    color="light"
  >
    Password Recovery
  </div>
  <div
    class="c2"
    color="text.secondary"
  >
    Step 1 of 
    3
  </div>
  <div
    class="c3"
  >
    <div
      class="c4"
      color="text.secondary"
    >
      Verify your identity using your two-factor device.
    </div>
    <div
      class="c5"
    >
      <label
        class="c6"
        font-size="0"
      >
        Username
        <input
          autocomplete="off"
          class="c7"
          color="text.onLight"
          inputmode="text"
          readonly=""
          type="text"
          value="joe@example.com"
        />
      </label>
    </div>
    <div
      class="c8"
    >
      <div
        class="c9"
        width="100%"
      >
        <label
          class="c10"
          font-size="0"
        >
          Two-factor type
        </label>
        <div
          class="c11"
        >
          <div
            class="react-select-container css-2b097c-container"
          >
            <div
              class="react-select__control css-yk16xz-control"
            >
              <div
                class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
              >
                <div
                  class="react-select__single-value css-1uccc91-singleValue"
                >
                  Hardware Key
                </div>
                <input
                  aria-autocomplete="list"
                  class="css-62g3xt-dummyInput"
                  id="react-select-4-input"
                  readonly=""
                  tabindex="0"
                  value=""
                />
              </div>
              <div
                class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-6q0nyr-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="c12"
      kind="primary"
      type="submit"
      width="100%"
    >
      Continue
    </button>
  </div>
</form>
`;

exports[`render form for authenticating with password to recover mfa device 1`] = `
.c3 {
  box-sizing: border-box;
  padding: 32px;
}

.c5 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c8 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 16px;
  width: 100%;
}

.c8:active {
  opacity: 0.56;
}

.c8:hover,
.c8:focus {
  background: #651FFF;
}

.c8:active {
  background: #354AA4;
}

.c8:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  width: 512px;
  background-color: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c7 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  color: #324148;
  background-color: #FFFFFF;
  margin-top: 4px;
}

.c7::-ms-clear {
  display: none;
}

.c7::placeholder {
  opacity: 0.4;
}

.c7:read-only {
  cursor: not-allowed;
}

.c6 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0px;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  padding-top: 32px;
  color: #FFFFFF;
  text-align: center;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.56);
  text-align: center;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 16px;
  color: rgba(255,255,255,0.56);
  text-align: center;
}

<form
  class="c0"
  width="512px"
>
  <div
    class="c1"
    color="light"
  >
    Two-Factor Device Recovery
  </div>
  <div
    class="c2"
    color="text.secondary"
  >
    Step 1 of 
    4
  </div>
  <div
    class="c3"
  >
    <div
      class="c4"
      color="text.secondary"
    >
      Verify your identity using your password.
    </div>
    <div
      class="c5"
    >
      <label
        class="c6"
        font-size="0"
      >
        Username
        <input
          autocomplete="off"
          class="c7"
          color="text.onLight"
          inputmode="text"
          readonly=""
          type="text"
          value="joe@example.com"
        />
      </label>
    </div>
    <div
      class="c5"
    >
      <label
        class="c6"
        font-size="0"
      >
        Password
        <input
          autocomplete="off"
          class="c7"
          color="text.onLight"
          inputmode="text"
          placeholder="Password"
          type="password"
          value=""
        />
      </label>
    </div>
    <button
      class="c8"
      kind="primary"
      type="submit"
      width="100%"
    >
      Continue
    </button>
  </div>
</form>
`;

exports[`render form for authenticating with totp 1`] = `
.c3 {
  box-sizing: border-box;
  padding: 32px;
}

.c5 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c9 {
  box-sizing: border-box;
  max-width: 50%;
  margin-bottom: 24px;
  margin-right: 16px;
  width: 100%;
}

.c12 {
  box-sizing: border-box;
  margin-bottom: 24px;
  width: 50%;
}

.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 16px;
  width: 100%;
}

.c13:active {
  opacity: 0.56;
}

.c13:hover,
.c13:focus {
  background: #651FFF;
}

.c13:active {
  background: #354AA4;
}

.c13:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  width: 512px;
  background-color: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c7 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  color: #324148;
  background-color: #FFFFFF;
  margin-top: 4px;
}

.c7::-ms-clear {
  display: none;
}

.c7::placeholder {
  opacity: 0.4;
}

.c7:read-only {
  cursor: not-allowed;
}

.c6 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0px;
}

.c10 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 4px;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  padding-top: 32px;
  color: #FFFFFF;
  text-align: center;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.56);
  text-align: center;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 16px;
  color: rgba(255,255,255,0.56);
  text-align: center;
}

.c8 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c11 .react-select-container {
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  border: none;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: rgba(0,0,0,0.87);
  background-color: #ffffff;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c11 .react-select__control,
.c11 .react-select__control--is-focused {
  min-height: 40px;
  height: 40px;
  background-color: transparent;
  border-color: transparent;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
}

.c11 .react-select__control:hover,
.c11 .react-select__control--is-focused:hover {
  border-color: transparent;
  cursor: pointer;
}

.c11 .react-select__option:hover {
  cursor: pointer;
  background-color: #eceff1;
}

.c11 .react-select__option--is-focused {
  background-color: #eceff1;
}

.c11 .react-select__option--is-selected {
  background-color: #cfd8dc;
  color: inherit;
}

.c11 .react-select__option--is-selected:hover {
  background-color: #cfd8dc;
}

.c11 .react-select__menu {
  margin-top: 0px;
}

.c11 .react-select__indicator-separator {
  display: none;
}

.c11 .react-select__loading-indicator {
  display: none;
}

.c11 .react-select--is-disabled .react-select__single-value,
.c11 .react-select--is-disabled .react-select__placeholder {
  color: rgba(0,0,0,0.24);
}

.c11 .react-select--is-disabled .react-select__indicator {
  color: rgba(0,0,0,0.14);
}

<form
  class="c0"
  width="512px"
>
  <div
    class="c1"
    color="light"
  >
    Password Recovery
  </div>
  <div
    class="c2"
    color="text.secondary"
  >
    Step 1 of 
    3
  </div>
  <div
    class="c3"
  >
    <div
      class="c4"
      color="text.secondary"
    >
      Verify your identity using your authenticator app.
    </div>
    <div
      class="c5"
    >
      <label
        class="c6"
        font-size="0"
      >
        Username
        <input
          autocomplete="off"
          class="c7"
          color="text.onLight"
          inputmode="text"
          readonly=""
          type="text"
          value="joe@example.com"
        />
      </label>
    </div>
    <div
      class="c8"
    >
      <div
        class="c9"
        width="100%"
      >
        <label
          class="c10"
          font-size="0"
        >
          Two-factor type
        </label>
        <div
          class="c11"
        >
          <div
            class="react-select-container css-2b097c-container"
          >
            <div
              class="react-select__control css-yk16xz-control"
            >
              <div
                class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
              >
                <div
                  class="react-select__single-value css-1uccc91-singleValue"
                >
                  Authenticator App
                </div>
                <input
                  aria-autocomplete="list"
                  class="css-62g3xt-dummyInput"
                  id="react-select-2-input"
                  readonly=""
                  tabindex="0"
                  value=""
                />
              </div>
              <div
                class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-6q0nyr-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c12"
        width="50%"
      >
        <label
          class="c6"
          font-size="0"
        >
          authenticator code
          <input
            autocomplete="one-time-code"
            class="c7"
            color="text.onLight"
            inputmode="numeric"
            placeholder="123 456"
            type="text"
            value=""
          />
        </label>
      </div>
    </div>
    <button
      class="c13"
      kind="primary"
      type="submit"
      width="100%"
    >
      Continue
    </button>
  </div>
</form>
`;

exports[`render form for authenticating with webauthn 1`] = `
.c3 {
  box-sizing: border-box;
  padding: 32px;
}

.c5 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c9 {
  box-sizing: border-box;
  max-width: 50%;
  margin-bottom: 24px;
  margin-right: 16px;
  width: 100%;
}

.c12 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 16px;
  width: 100%;
}

.c12:active {
  opacity: 0.56;
}

.c12:hover,
.c12:focus {
  background: #651FFF;
}

.c12:active {
  background: #354AA4;
}

.c12:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  width: 512px;
  background-color: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c7 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  color: #324148;
  background-color: #FFFFFF;
  margin-top: 4px;
}

.c7::-ms-clear {
  display: none;
}

.c7::placeholder {
  opacity: 0.4;
}

.c7:read-only {
  cursor: not-allowed;
}

.c6 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0px;
}

.c10 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 4px;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  padding-top: 32px;
  color: #FFFFFF;
  text-align: center;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.56);
  text-align: center;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 16px;
  color: rgba(255,255,255,0.56);
  text-align: center;
}

.c8 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c11 .react-select-container {
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  border: none;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: rgba(0,0,0,0.87);
  background-color: #ffffff;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c11 .react-select__control,
.c11 .react-select__control--is-focused {
  min-height: 40px;
  height: 40px;
  background-color: transparent;
  border-color: transparent;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
}

.c11 .react-select__control:hover,
.c11 .react-select__control--is-focused:hover {
  border-color: transparent;
  cursor: pointer;
}

.c11 .react-select__option:hover {
  cursor: pointer;
  background-color: #eceff1;
}

.c11 .react-select__option--is-focused {
  background-color: #eceff1;
}

.c11 .react-select__option--is-selected {
  background-color: #cfd8dc;
  color: inherit;
}

.c11 .react-select__option--is-selected:hover {
  background-color: #cfd8dc;
}

.c11 .react-select__menu {
  margin-top: 0px;
}

.c11 .react-select__indicator-separator {
  display: none;
}

.c11 .react-select__loading-indicator {
  display: none;
}

.c11 .react-select--is-disabled .react-select__single-value,
.c11 .react-select--is-disabled .react-select__placeholder {
  color: rgba(0,0,0,0.24);
}

.c11 .react-select--is-disabled .react-select__indicator {
  color: rgba(0,0,0,0.14);
}

<form
  class="c0"
  width="512px"
>
  <div
    class="c1"
    color="light"
  >
    Password Recovery
  </div>
  <div
    class="c2"
    color="text.secondary"
  >
    Step 1 of 
    3
  </div>
  <div
    class="c3"
  >
    <div
      class="c4"
      color="text.secondary"
    >
      Verify your identity using your hardware key.
    </div>
    <div
      class="c5"
    >
      <label
        class="c6"
        font-size="0"
      >
        Username
        <input
          autocomplete="off"
          class="c7"
          color="text.onLight"
          inputmode="text"
          readonly=""
          type="text"
          value="joe@example.com"
        />
      </label>
    </div>
    <div
      class="c8"
    >
      <div
        class="c9"
        width="100%"
      >
        <label
          class="c10"
          font-size="0"
        >
          Two-factor type
        </label>
        <div
          class="c11"
        >
          <div
            class="react-select-container css-2b097c-container"
          >
            <div
              class="react-select__control css-yk16xz-control"
            >
              <div
                class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
              >
                <div
                  class="react-select__single-value css-1uccc91-singleValue"
                >
                  Hardware Key
                </div>
                <input
                  aria-autocomplete="list"
                  class="css-62g3xt-dummyInput"
                  id="react-select-6-input"
                  readonly=""
                  tabindex="0"
                  value=""
                />
              </div>
              <div
                class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-6q0nyr-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="c12"
      kind="primary"
      type="submit"
      width="100%"
    >
      Continue
    </button>
  </div>
</form>
`;
